overflow fixed

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -114,6 +114,10 @@ tbody tr td {
 }
 /* top navigation */
 
+.navbar {
+  overflow: hidden;
+}
+
 .navbar-expand-lg {
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
